Réparation du bouton de la page d'accueil.

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 		explorer une grande partie de notre galaxie. Suivez les<br/>
 		histoires des plus grands héros du XIème siècle, des <br/>
 		astronautes brillants d'ingéniosité et pleins de bravoure.<br/></p></section>
-		<button id="boutonAventure"><a href="choix.html">Commencez l'aventure<a/></button>
+		<a href="choix.html"><button id="boutonAventure">Commencez l'aventure</button></a>
 	
 	</body>
 
