--- a/html/index.html
+++ b/html/index.html
@@ -12,10 +12,10 @@
 	
 		<section id="intro">		
 		<h1>Space Wars</h1>
-		<p>En 2069, l'humanité a contre toute attente réussi à<br/>
-		explorer une grande partie de notre galaxie. Suivez les<br/>
-		histoires des plus grands héros du XIème siècle, des <br/>
-		astronautes brillants d'ingéniosité et pleins de bravoure.<br/></p></section>
+		<p>En 2069, l'humanité a exploré toute la galaxie et <br/>
+		en demande toujours plus. Suivez les aventures des plus<br/>
+		grands héros du XIème siècle, des astronautes brillants<br/>
+		d'ingéniosité et pleins de bravoure.<br/></p></section>
 		<a href="choix.html"><button id="boutonAventure">Commencez l'aventure</button></a>
 	
 	</body>
