--- a/html/europe.html
+++ b/html/europe.html
@@ -13,15 +13,19 @@
 		<section id="presentation">		
 		<h1>La relique du pouvoir</h1>
 		<p>Des vacanciers stellaires tombent par hasard sur un artefact alien<br/>
-		aux confins de l'univers connu. L'Agence Spatiale Européenne décide donc<br/>
+		aux confins de l'univers connu. L'Agence Spatiale Européenne décide<br/>
 		d'envoyer sa meilleure équipe d'astronautes enquêter, d'autant plus que<br/>
-		la planète dont il vient serait terraformable. Mais la mission allait<br/>
-		S'avérer beaucoup plus ardue que prévu...</p>
+		la planète dont il vient serait terraformable. Mais la mission va<br/>
+		s'avérer beaucoup plus ardue que prévu...</p>
 		</section>
 		
+		<div id="jeu">
+		<a href="miniJeuShooter.html"><button id="boutonJeu">Sauvez les membres de l'équipage !</button></a>
 		<div id="imageGarde">
 		
 			<img alt="vaisseau abandonné" src="../images/vaisseau.png" />
+		
+		</div>
 		
 		</div>
 	
