--- a/html/miniJeuShooter.html
+++ b/html/miniJeuShooter.html
@@ -5,15 +5,17 @@
 	
 	<meta charset="utf-8"/>
 	<link href="../css/styleGlobal.css" rel="stylesheet" />
+	<link href="../css/shooter.css" rel="stylesheet" />
 	<script type="text/javascript" src="../js/miniJeu.js"></script>
 	
 	</head>
 
 	<body>
 	
-		<div></div>
 		<p>Le jeu s'affiche pas : (</p>
-		<a href="retourVaisseau.html"><button id="boutonPageApresJeu">C'est fini !</button></a>
+				<div><a href="retourVaisseau.html"><button id="boutonPageApresJeu">C'est fini !</button></a>
+		<img src="../images/astronautePlonge.png" alt="imageAstronauteDansLEau" />
+		</div>
 		<canvas id="canvas" width="500" height="400"></canvas>
 	
 	</body>
