Déplacement d'une balle

--- a/html/miniJeuShooter.html
+++ b/html/miniJeuShooter.html
@@ -4,19 +4,16 @@
 	<head>
 	
 	<meta charset="utf-8"/>
+	<title>Mini-Jeu</title>
 	<link href="../css/styleGlobal.css" rel="stylesheet" />
 	<link href="../css/shooter.css" rel="stylesheet" />
-	<script type="text/javascript" src="../js/miniJeu.js"></script>
 	
 	</head>
 
 	<body>
 	
-		<p>Le jeu s'affiche pas : (</p>
-				<div><a href="retourVaisseau.html"><button id="boutonPageApresJeu">C'est fini !</button></a>
-		<img src="../images/astronautePlonge.png" alt="imageAstronauteDansLEau" />
-		</div>
-		<canvas id="canvas" width="500" height="400"></canvas>
+		<canvas id="myCanvas" width="480" height="320"></canvas>
+		<script type="text/javascript" src="../js/miniJeu.js"></script>
 	
 	</body>
 
