--- a/html/chine.html
+++ b/html/chine.html
@@ -13,16 +13,15 @@
 	sont encore entrain de découvrir la nouvelles galaxie ils ont déjà réussie a trouver une<br/>
 	planète très riche en ressources mais cependant ils reçoivent plusieurs SOS à travers la <br/>
 	nouvelle galaxie semble venir de ses camarades quel sera sa déscision ? </p>
-	</p>
 	</section>
 
 	<div id ="imageGarde">
 		<img alt="vaisseau abandonné" src="../images/chineTerre.jpeg">
 	</div>
 	<nav id = "choix">
-		<a href ="choix1.html"><button>Sauvez les tous</button> </a>
-		<a href="choix2.html"><button>Sauvez les Russes </button></a>
-		<a href="choix3.html"><button>Sauvez Personnes</button></a>
+		<a href ="ChineChoix1.html"><button>Sauvez les tous</button> </a>
+		<a href="ChineChoix2.html"><button>Sauvez les Russes </button></a>
+		<a href="ChineChoixhoix3.html"><button>Sauvez Personnes</button></a>
 	</nav>
 	</body>
 </html>
