--- a/html/europe.html
+++ b/html/europe.html
@@ -5,6 +5,9 @@
 	
 	<meta charset="utf-8"/>
 	<link href="../css/styleEurope.css" rel="stylesheet" />
+	<link href="../css/bootstrap.css" rel="stylesheet" />
+	<link href="../css/bootstrap-grid.css" rel="stylesheet" />
+	
 	
 	</head>
 
