--- a/html/index.html
+++ b/html/index.html
@@ -6,19 +6,29 @@
 	<meta charset="utf-8"/>
 	<link href="../css/style.css" rel="stylesheet" />
 	<link href="../css/styleGlobal.css" rel="stylesheet" />
+	<link href="../css/bootstrap.css" rel="stylesheet" />
+	<link href="../css/bootstrap-grid.css" rel="stylesheet" />
+	
 	
 	</head>
 
-	<body>
-	
-		<section id="intro">		
-		<h1>Space Wars</h1>
-		<p>En 2069, l'humanité a exploré toute la galaxie et <br/>
-		en demande toujours plus. Suivez les aventures des plus<br/>
-		grands héros du XIème siècle, des astronautes brillants<br/>
-		d'ingéniosité et pleins de bravoure.<br/></p></section>
-		<a href="choix.html"><button id="boutonAventure">Commencez l'aventure</button></a>
-	
-	</body>
+<body>
+
+	<section class="container-fluid mt-0 ml-0" id="intro">
+		<div class="row">
+			<div class="col-sm-12">
+				<h1>Space Wars</h1>
+				<p>
+					En 2069, l'humanité a exploré toute la galaxie et <br /> en
+					demande toujours plus. Suivez les aventures des plus<br /> grands
+					héros du XIème siècle, des astronautes brillants<br />
+					d'ingéniosité et pleins de bravoure.<br />
+				</p>
+				<a href="choix.html">
+				<button class="btn btn-info col-sm-4 ml-5 mt-sm-5" id="boutonAventure">Commencez l'aventure</button></a>
+			</div>
+		</div>
+	</section>
+</body>
 
 </html>
