Ajout de dossiers !

--- a/html/europe/europe.html
+++ b/html/europe/europe.html
@@ -8,7 +8,6 @@
 	<link href="../css/bootstrap.css" rel="stylesheet" />
 	<link href="../css/bootstrap-grid.css" rel="stylesheet" />
 	
-	
 	</head>
 
 	<body>
@@ -26,7 +25,7 @@
 		<a href="miniJeuShooter.html"><button id="boutonJeu">Sauvez les membres de l'équipage !</button></a>
 		<div id="imageGarde">
 		
-			<img alt="vaisseau abandonné" src="../images/vaisseau.png" />
+			<img alt="vaisseau abandonné" src="../images/europe/vaisseau.png" />
 		
 		</div>
 		
