--- a/html/Chine/ChineChoix1.html
+++ b/html/Chine/ChineChoix1.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../css/styleChine.css">
+		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
 		<title> Chine</title>
 	</head>
 	<body>
@@ -16,7 +16,7 @@
 	</section>
 
 	<div id="imageGarde">
-		<img alt="Départ" src="../images/chinechoix1.jpg">
+		<img alt="Départ" src="../../images/chinechoix1.jpg">
 	</div>
 
 	<nav id = "choix">
