--- a/html/Chine/ChineChoix223.html
+++ b/html/Chine/ChineChoix223.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../css/styleChine.css">
+		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
 		<title> Chine</title>
 	</head>
 	<body>
@@ -15,10 +15,10 @@
 		</section>
 
 		<div id="imageGarde">
-		<img alt="Départ" src="../images/1111.jpg">
+		<img alt="Départ" src="../../images/1111.jpg">
 		</div>
 
 		<nav id = "choix">
-			<a href ="index.html"><button> Retour à la page d'accueil </button> </a>
+			<a href ="../index.html"><button> Retour à la page d'accueil </button> </a>
 	</body>
 </html>
