--- a/html/Chine/chine.html
+++ b/html/Chine/chine.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../css/styleChine.css">
+		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
 		<title> Chine</title>
 	</head>
 	<body>
@@ -16,12 +16,12 @@
 	</section>
 
 	<div id ="imageGarde">
-		<img alt="vaisseau abandonné" src="../images/chineTerre.jpeg">
+		<img alt="vaisseau abandonné" src="../../images/chineTerre.jpeg">
 	</div>
 	<nav id = "choix">
 		<a href ="ChineChoix1.html"><button>Sauvez les tous</button> </a>
 		<a href="ChineChoix2.html"><button>Sauvez les Russes </button></a>
-		<a href="ChineChoixhoix3.html"><button>Sauvez Personnes</button></a>
+		<a href="ChineChoix3.html"><button>Sauvez Personnes</button></a>
 	</nav>
 	</body>
 </html>
