--- a/html/choix.html
+++ b/html/choix.html
@@ -20,7 +20,7 @@
 		<div id="choix">
 		
 			<div id="usa" class="factions"><a href="usa.html">Les USA</a></div>
-			<div id="chine" class="factions"><a href="chine.html">La Chine</a></div>
+			<div id="chine" class="factions"><a href="Chine/chine.html">La Chine</a></div>
 			<div id="europe" class="factions"><a href="europe.html">L'Europe</a></div>
 			<div id="russie" class="factions"><a href="russie.html">La Russie</a></div>
 		
