--- a/html/Chine/ChineChoix12.html
+++ b/html/Chine/ChineChoix12.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../css/styleChine.css">
+		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
 		<title> Chine</title>
 	</head>
 	<body>
@@ -20,7 +20,7 @@
 		</section>
 
 		<div id="imageGarde">
-		<img alt="Départ" src="../images/alien.jpg">
+		<img alt="Départ" src="../../images/alien.jpg">
 		</div>
 
 		<nav id = "choix">
