--- a/html/Chine/ChineChoix1234.html
+++ b/html/Chine/ChineChoix1234.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../css/styleChine.css">
+		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
 		<title> Chine</title>
 	</head>
 	<body>
@@ -14,11 +14,11 @@
 		</section>
 
 		<div id="imageGarde">
-		<img alt="Départ" src="../images/ccc1234.jpg">
+		<img alt="Départ" src="../../images/ccc1234.jpg">
 		</div>
 
 		<nav id = "choix">
-			<a href ="index.html"><button> Retour page acceuil</button> </a>
+			<a href ="../index.html"><button> Retour page acceuil</button> </a>
 		</nav>
 	</body>
 </html>
