--- a/html/europe/europe.html
+++ b/html/europe/europe.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-	<head>
-	
-	<meta charset="utf-8"/>
-	<link href="../css/styleEurope.css" rel="stylesheet" />
-	<link href="../css/bootstrap.css" rel="stylesheet" />
-	<link href="../css/bootstrap-grid.css" rel="stylesheet" />
-	
-	</head>
+<head>
 
-	<body>
-	
-		<section id="presentation">		
+<meta charset="utf-8" />
+<link href="../../css/bootstrap.css" rel="stylesheet" />
+<link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+
+</head>
+
+<body>
+
+	<section id="presentation">
 		<h1>La relique du pouvoir</h1>
-		<p>Des vacanciers stellaires tombent par hasard sur un artefact alien<br/>
-		aux confins de l'univers connu. L'Agence Spatiale Européenne décide<br/>
-		d'envoyer sa meilleure équipe d'astronautes enquêter, d'autant plus que<br/>
-		la planète dont il vient serait terraformable. Mais la mission va<br/>
-		s'avérer beaucoup plus ardue que prévu...</p>
-		</section>
-		
-		<div id="jeu">
-		<a href="miniJeuShooter.html"><button id="boutonJeu">Sauvez les membres de l'équipage !</button></a>
+		<p>
+			Des vacanciers stellaires tombent par hasard sur un artefact alien<br />
+			aux confins de l'univers connu. L'Agence Spatiale Européenne décide<br />
+			d'envoyer sa meilleure équipe d'astronautes enquêter, d'autant plus
+			que<br /> la planète dont il vient serait terraformable. Mais la
+			mission va<br /> s'avérer beaucoup plus ardue que prévu...
+		</p>
+	</section>
+
+	<div id="jeu">
+		<a href="miniJeuShooter.html">
+			<button class="btn btn-success" id="boutonJeu">Sauvez les membres de l'équipage !</button>
+		</a>
 		<div id="imageGarde">
-		
-			<img alt="vaisseau abandonné" src="../images/europe/vaisseau.png" />
-		
+
+			<img alt="vaisseau abandonné" src="../../images/europe/vaisseau.png" />
+
 		</div>
-		
-		</div>
-	
-	</body>
+
+	</div>
+
+</body>
 
 </html>
