Le site est presque fini !

--- a/html/Chine/ChineChoix1.html
+++ b/html/Chine/ChineChoix1.html
@@ -3,26 +3,29 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+		        <link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Sauvetage</title>
 	</head>
 	<body>
 	<section id="presentation">
 	<h1>Sauvez tous le monde</h1>
-	<p> Après de long heure de réflexion les chinois décident de sauver tous le monde ! <br/>
-		Mais sauvez tous le monde rends le mission beaucoups plus compliquée s'ils sauvent un <br/> par un ce la prend trop de temps sinon il faudra diviser les troupes un autre choix <br/>
-		déscisif à prendre </p>
-	</p>
+	<p> Après un long moment de réflexion les chinois décident de sauver tout le monde ! <br/>
+        Mais cela rend la mission beaucoup plus compliquée car une tempête se prépare et<br/>
+        risque de réduire à néant des mois de recherche et de faire partir en fumée des milliards...
+</p>
 	</section>
 
 	<div id="imageGarde">
 		<img alt="Départ" src="../../images/chinechoix1.jpg">
 	</div>
 
-	<nav id = "choix">
-		<a href ="ChineChoix12.html"><button> Sauvez un par un </button> </a>
-		<a href="ChineChoix22.html"><button> Diviser les troupes</button></a>
-		<a href="ChineChoix3.html"><button>Sauvez Personnes</button></a>
+	<nav id = "choix" class="container">
+		<a href ="ChineChoix12.html"><div class="options"><button class="btn btn-info"> Les sauver un par un </button></div></a>
+		<a href="ChineChoix22.html"><div class="options"><button class="btn btn-info"> Diviser les troupes</button></div></a>
+		<a href="ChineChoix3.html"><div class="options"><button class="btn btn-info"> Ne sauver personne</button></div></a>
 	</nav>
 </body>
 </html>
