--- a/html/Chine/ChineChoix12.html
+++ b/html/Chine/ChineChoix12.html
@@ -3,19 +3,22 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Sauvetage</title>
 	</head>
 	<body>
 		<section id="presentation">
-			<h1>Sauvetage planète par planète à travers !</h1>
-			<p>
+			<h1>Sauvetage planète par planète à travers la galaxie !</h1>
+			<p id="texte">
 			Après 2 mois de sauvetage vous avez réussi à sauver les Américains et les Européens<br/>
-			Mais ils n'ont pas réussit à sauvez les 2 autres mais la dernière vous êtes arrivées<br/>
-			la Russie se sont fait entièrement contaminer par des parasites personnes n'as <br/>
-			réussit à s'en sortir après des semaines de combat les chinois ont enfin réussit <br/>
-			à s'en tirer mais arrivée sur votre planète une très mauvaise nouvelles boulverse <br/>
-			votre joie votre planète mère se fait attaquer par des parasites <br/>
+			Malheureusement vous vous rendez compte trop tard que l'équipage russe s'est fait<br/>
+			contaminer par des parasites, aucun astronaute n'a survécu. Le votre s'en sort<br/>
+			difficilement après plusieurs jours de combat sans s'arrêter, mais seule une petite<br/>
+			partie arrive à repartir. C'est alors qu'ils reçoivent une transmission vous informant<br/>
+			que la Terre s'est faite contaminer. Qu'allez-vous faire ?<br/>
 			</p>
 		</section>
 
@@ -24,8 +27,8 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="ChineChoix123.html"><button> Retourner sur Terre </button> </a>
-			<a href="ChineChoix223.html"><button> Ne pas aller </button></a>
+			<div class="options"><a href ="ChineChoix123.html"><button class="btn btn-info"> Retourner sur Terre </button> </a></div>
+			<div class="options"><a href="ChineChoix223.html"><button class="btn btn-info"> Ne pas y aller </button></a></div>
 		</nav>
 	</body>
 </html>
