--- a/html/Chine/ChineChoix123.html
+++ b/html/Chine/ChineChoix123.html
@@ -3,14 +3,18 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Sauvetage</title>
 	</head>
 	<body>
 		<section id="presentation">
 			<h1>Sauvetage de la planète mère !</h1>
-			<p> Le sauvetage semble être compliquée vous devez faire un choix, prendre le  <br/>
-			risque de sauver tout le monde où bien sauver une grosse partie et prendre la fuite <br/>
+			<p> Le sauvetage semble être compliqué. Choisirez-vous le risque d'attaquer les parasites de <br/>
+            toutes vos forces ou prendrez-vous la dure décision d'envoyer vos têtes nucléaires sur votre<br/>
+            capitale ?
 			</p>
 		</section>
 
@@ -19,8 +23,8 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="ChineChoix1234.html"><button> Sauver notre planète</button> </a>
-			<a href="ChineChoix2234.html"><button> La vie pour la vengeance </button></a>
+			<div class="options"><a href ="ChineChoix1234.html"><button class="btn btn-info">Attaquer l'ennemi</button> </a></div>
+			<div class="options"><a href="ChineChoix2234.html"><button class="btn btn-info">Envoyer les missiles</button></a></div>
 		</nav>
 	</body>
 </html>
