--- a/html/Chine/ChineChoix1234.html
+++ b/html/Chine/ChineChoix1234.html
@@ -3,13 +3,16 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Perdu !</title>
 	</head>
 	<body>
 		<section id="presentation">
 			<h1> Les battus </h1>
-			<p>Vous avez combattu jusqu'à la fin mais cette fin semble défavorable <br/>
+			<p>Vous vous êtes battus avec courage mais vous aviez peut-être sous-estimé votre ennemi...<br/>
 			</p>
 		</section>
 
@@ -18,7 +21,7 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="../index.html"><button> Retour page acceuil</button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
 		</nav>
 	</body>
 </html>
