--- a/html/Chine/ChineChoix222.html
+++ b/html/Chine/ChineChoix222.html
@@ -4,12 +4,16 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Fin</title>
 	</head>
 	<body>
 		<section id="presentation">
-			<h1> La défaite </h1>
-			<p> Malgré vos effort Vous n'avaez pas réussi à sauver et vous faites capturer et réduit en esclavage a tout à tous jamais <br/>
+			<h1> Défaite pour votre équipage </h1>
+            <p>Malgré votre bravoure vous êtes rapidement dépassé en force et en nombre par l'ennemi qui<br/>
+            vous réduit en esclavage vous et votre équipage
 			</p>
 		</section>
 
@@ -18,7 +22,7 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="../index.html"><button> Retour à l'accueil </button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
 		</nav>
 	</body>
 </html>
