--- a/html/Chine/ChineChoix223.html
+++ b/html/Chine/ChineChoix223.html
@@ -4,13 +4,16 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Perdu !</title>
 	</head>
 	<body>
 		<section id="presentation">
 			<h1>Traitre</h1>
 			<p>
-			Votre planète a été détruite et vous vous culpabilise à tous jamais <br/>
+			Votre planète a été détruite et vous culpabilisez le reste de votre vie <br/>
 			</p>
 		</section>
 
@@ -19,6 +22,6 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="../index.html"><button> Retour à la page d'accueil </button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
 	</body>
 </html>
