--- a/html/Chine/ChineChoix224.html
+++ b/html/Chine/ChineChoix224.html
@@ -4,12 +4,15 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Traqués</title>
 	</head>
 	<body>
 		<section id="presentation">
 			<h1> Un retour possible ?</h1>
-			<p> Vous vous etes fait suivies par des vaisseaux inconnues. Que faire ?<br/>
+			<p>Des vaisseaux inconnus vous traquent plus ou moins discrètement. Que faire ?<br/>
 			</p>
 		</section>
 
@@ -18,8 +21,8 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="ChineChoix2241.html"><button> Les attaquer</button> </a>
-			<a href ="ChineChoix2242.html"><button> Communiquer </button> </a>
+			<div class="options"><a href ="ChineChoix2241.html"><button class="btn btn-info"> Les attaquer</button> </a></div>
+			<div class="options"><a href ="ChineChoix2242.html"><button class="btn btn-info"> Communiquer </button> </a></div>
 		</nav>
 	</body>
 </html>
