--- a/html/Chine/ChineChoix2241.html
+++ b/html/Chine/ChineChoix2241.html
@@ -4,12 +4,15 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Crash</title>
 	</head>
 	<body>
 		<section id="presentation">
-			<h1> La survie ! </h1>
-			<p> Vous avez réussi a les détruires mais votre vaisseau tombe en panne <br/>
+			<h1> Survivre ! </h1>
+			<p> Vous avez réussi a les détruire mais votre vaisseau tombe en panne <br/>
 			</p>
 		</section>
 
@@ -18,8 +21,8 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="ChineChoix22411.html"><button> Envoyer en signal de SOS</button> </a>
-			<a href ="ChineChoix22412.html"><button> Réparer le vaisseau </button> </a>
+			<div class="options"><a href ="ChineChoix22411.html"><button class="btn btn-info"> Envoyer en signal de SOS</button> </a></div>
+			<div class="options"><a href ="ChineChoix22412.html"><button class="btn btn-info"> Réparer le vaisseau </button> </a></div>
 		</nav>
 	</body>
 </html>
