--- a/html/Chine/ChineChoix31.html
+++ b/html/Chine/ChineChoix31.html
@@ -4,12 +4,15 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Perdu !</title>
 	</head>
 	<body>
 	<section id="presentation">
-	<h1> D'autre ennemi encore </h1>
-	<p> Votre signal fait venir une 3eme groupe ennemi différent qui a réduit la planète en miette <br/>
+	<h1> D'autres ennemis encore </h1>
+	<p> Votre signal fait venir un autre annemi inconnu qui a réduit la planète en miettes<br/>
 	 </p>
 	</section>
 
@@ -17,7 +20,7 @@
 		<img alt="vaisseau abandonné" src="../../images/détruit.jpg">
 	</div>
 	<nav id = "choix">
-		<a href ="../index.html"><button>Retour à l'accueil</button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
 	</nav>
 	</body>
 </html>
