--- a/html/Chine/ChineChoix32.html
+++ b/html/Chine/ChineChoix32.html
@@ -4,12 +4,16 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Perdu !</title>
 	</head>
 	<body>
 	<section id="presentation">
-	<h1> Fuite non réussite</h1>
-	<p> Lorsque vous vous reposer sur une planète inconnue, vous vous etes fait attaquer par les humain controler par des parasite !! <br/>
+	<h1> Fuite non réussie</h1>
+    <p>Vous faites escale sur une petite planète... Infestée de parasites. Vous et votre équipage n'y<br/>
+        survivez pas
 	 </p>
 	</section>
 
@@ -17,7 +21,7 @@
 		<img alt="vaisseau abandonné" src="../../images/mort.png">
 	</div>
 	<nav id = "choix">
-		<a href ="../index.html"><button>Retour à l'accueil</button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
 	</nav>
 	</body>
 </html>
