--- a/html/Chine/ChineChoix51.html
+++ b/html/Chine/ChineChoix51.html
@@ -3,14 +3,17 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
+        <link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
+                <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
 		<title> Chine</title>
 	</head>
 	<body>
 	<section id="presentation">
 	<h1> Erreur de votre part</h1>
-	<p> Vous avez laisse tomber les survivants une video a réussit à se diffuser sur terre qui <br/>
-		démontre vos actes tous les puissances se retourne sur toi.
+    <p>Malheureusement pour vous une caméra de surveillance du vaisseau russe vous capture en<br/>
+        pleine fuite, vous êtes arrêtés dès votre retour sur Terre
 	 </p>
 	</section>
 
@@ -18,7 +21,7 @@
 		<img alt="vaisseau abandonné" src="../../images/ccc1234.jpg">
 	</div>
 	<nav id = "choix">
-		<a href ="../index.html"><button>Retour à l'accueil</button> </a>
+		<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retour à l'accueil</button> </a></div>
 	</nav>
 	</body>
 </html>
