--- a/html/Chine/chine.html
+++ b/html/Chine/chine.html
@@ -3,25 +3,28 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
+        <link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
 		<title> Chine</title>
 	</head>
 	<body>
 	<section id="presentation">
 	<h1>Les Dominants de la nouvelle planète</h1>
-	<p> Les chinois les plus avancées en termes technologique, pendant que les autres puissance <br/>
-	sont encore entrain de découvrir la nouvelles galaxie ils ont déjà réussie a trouver une<br/>
-	planète très riche en ressources mais cependant ils reçoivent plusieurs SOS à travers la <br/>
-	nouvelle galaxie semble venir de ses camarades quel sera sa déscision ? </p>
+	<p>Technologiquement plus avancée que ses concurrents, la Chine est déjà établie depuis <br/>
+    plusieurs années dans la galaxie d'Andromède, alors que les Russes viennent d'y envoyer <br/>
+    leur premier vaisseau. Lors de la prospection d'un gisement très prometteur un équipage<br/>
+    chinois reçoit simultanément plusieurs messages de détresse. Quel sera leur décision ?</p>
 	</section>
 
 	<div id ="imageGarde">
 		<img alt="vaisseau abandonné" src="../../images/chineTerre.jpeg">
 	</div>
 	<nav id = "choix">
-		<a href ="ChineChoix1.html"><button>Sauvez les tous</button> </a>
-		<a href="ChineChoix2.html"><button>Sauvez les Russes </button></a>
-		<a href="ChineChoix3.html"><button>Sauvez Personnes</button></a>
+		<div class="options"><a href ="ChineChoix1.html"><button class="btn btn-info">Sauvez les tous</button> </a></div>
+		<div class="options"><a href="ChineChoix2.html"><button class="btn btn-info">Sauvez les Russes </button></a></div>
+		<div class="options"><a href="ChineChoix3.html"><button class="btn btn-info">Ne sauver personne</button></a></div>
 	</nav>
 	</body>
 </html>
