--- a/html/choix.html
+++ b/html/choix.html
@@ -4,7 +4,11 @@
 	<head>
 	
 	<meta charset="utf-8"/>
-	<link href="../css/style2.css" rel="stylesheet" />
+    <link href="../css/style.css" rel="stylesheet" />
+    <link href="../css/style2.css" rel="stylesheet" />
+	<link href="../css/styleGlobal.css" rel="stylesheet" />
+	<link href="../css/bootstrap.css" rel="stylesheet" />
+	<link href="../css/bootstrap-grid.css" rel="stylesheet" />
 	
 	</head>
 
@@ -19,12 +23,13 @@
 		
 		<div id="choix">
 		
-			<div id="usa" class="factions"><a href="usa.html">Les USA</a></div>
-			<div id="chine" class="factions"><a href="Chine/chine.html">La Chine</a></div>
-			<div id="europe" class="factions"><a href="europe.html">L'Europe</a></div>
-			<div id="russie" class="factions"><a href="russie.html">La Russie</a></div>
+			<div id="usa" class="factions"><a href="usa.html" class="liensFactions">Les USA</a></div>
+			<div id="chine" class="factions"><a href="Chine/chine.html" class="liensFactions">La Chine</a></div>
+			<div id="europe" class="factions"><a href="./europe/europe.html" class="liensFactions">L'Europe</a></div>
+			<div id="russie" class="factions"><a href="russie/russie.html" class="liensFactions">La Russie</a></div>
 		
-		</div>
+        </div>
+        <audio autoplay loop src="../musiques/imperia.mp3"></audio>
 	
 	</body>
 
