--- a/html/Chine/ChineChoix2.html
+++ b/html/Chine/ChineChoix2.html
@@ -3,13 +3,17 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Sauvetage</title>
 	</head>
 	<body>
 	<section id="presentation">
-	<h1> Un peu tard</h1>
-	<p> Une grosse partie des guerrier Russes sont mort ou controler par des parasites <br/>
+	<h1>Trop tard !</h1>
+    <p>L'équipage russe que vous avez tenté d'aider s'était fait infester par un parasite inconnu, tout<br/>
+    espoir semble perdu pour eux.
 	 </p>
 	</section>
 
@@ -17,8 +21,8 @@
 		<img alt="vaisseau abandonné" src="../../images/feu.jpg">
 	</div>
 	<nav id = "choix">
-		<a href ="ChineChoix51.html"><button>Laisser tomber</button> </a>
-		<a href="ChineChoix52.html"><button> Sauver les</button></a>
+		<div class="options"><a href ="ChineChoix51.html"><button class="btn btn-info">Tant pis, partons</button> </a></div>
+		<div class="options"><a href="ChineChoix52.html"><button class="btn btn-info">Sauvons les !</button></a></div>
 	</nav>
 	</body>
 </html>
