--- a/html/Chine/ChineChoix22.html
+++ b/html/Chine/ChineChoix22.html
@@ -4,13 +4,18 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Division</title>
 	</head>
 	<body>
 		<section id="presentation">
 			<h1> Divisons nous pour le sauvetage</h1>
-			<p> Vous avez divisez les troupe pour sauvez tout le monde mais le malheur vous arrive dessus <br/>
-			Lors de votre sauvetage votre nouvelle planète a été attaquer les défenses se fait détruire <br/>
+            <p>Vous vous divisez pour mieux régner mais le destin est contre vous : le premier éqquipage se<br/>
+                fait aspirer par un trou noir dont la force de gravitation était couverte par une planète<br/>
+                massive, tandis que l'autre doit choisir entre protéger le gisement qui se fait attaquer<br/>
+                par des vaisseaux inconnus et la Terre qui se fait envahir par des parasites
 			</p>
 		</section>
 
@@ -19,8 +24,8 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="ChineChoix222.html"><button> Libérer la planète </button> </a>
-			<a href ="ChineChoix224.html"><button> Retourner sur Terre</button> </a>
+			<div class="options"><a href ="ChineChoix222.html"><button class="btn btn-info"> Libérer la planète </button> </a></div>
+			<div class="options"><a href ="ChineChoix224.html"><button class="btn btn-info"> Retourner sur Terre</button> </a></div>
 		</nav>
 	</body>
 </html>
