--- a/html/Chine/ChineChoix22411.html
+++ b/html/Chine/ChineChoix22411.html
@@ -4,12 +4,16 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Perdu !</title>
 	</head>
 	<body>
 		<section id="presentation">
-			<h1> L'Erreur! </h1>
-			<p> Votre signal a attirée d'autre alein et finalement vous etes mort !! <br/>
+			<h1> Erreur ! </h1>
+            <p> Votre signal a attirée des extra-terrestres agressifs qui déciment votre équipage et réduisent<br/>
+                votre vaisseau en poussière
 			</p>
 		</section>
 
@@ -18,7 +22,7 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="../index.html"><button> Retour à l'accueil</button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
 		</nav>
 	</body>
 </html>
