--- a/html/Chine/ChineChoix22412.html
+++ b/html/Chine/ChineChoix22412.html
@@ -4,13 +4,16 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Fin</title>
 	</head>
 	<body>
 		<section id="presentation">
 			<h1> Retour sur Terre </h1>
-			<p> Vous avez réussi à réparer le vaisseau et retourner sur terre mais <br/>
-				la peur de l'espces restera dans votre coeur à tous jamais <br/>
+			<p> Vous avez réussi à réparer le vaisseau et à retourner sur Terre mais <br/>
+				la peur de l'espace restera dans votre coeur à tout jamais <br/>
 			</p>
 		</section>
 
@@ -19,7 +22,7 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="../index.html"><button> Retour à l'accueil </button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
 		</nav>
 	</body>
 </html>
