--- a/html/Chine/ChineChoix2242.html
+++ b/html/Chine/ChineChoix2242.html
@@ -4,12 +4,15 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Perdu !</title>
 	</head>
 	<body>
 		<section id="presentation">
-			<h1> Un retour possible ?</h1>
-			<p> Vous vous etes fait attaquer ce sont des ennemis !!<br/>
+			<h1>Attaque surprise !</h1>
+			<p>C'était toute une flotte de guerre qui vous suivait, vous n'aviez aucune chance !<br/>
 			</p>
 		</section>
 
@@ -18,7 +21,7 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="../index.html"><button> Retour à l'accueil</button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
 		</nav>
 	</body>
 </html>
