--- a/html/Chine/ChineChoix3.html
+++ b/html/Chine/ChineChoix3.html
@@ -4,13 +4,16 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Fin</title>
 	</head>
 	<body>
 	<section id="presentation">
 	<h1> Ne pas pendre de risque</h1>
-	<p> Vous ne voulez pas prendre le risque cela semble etre un bon choix car vous etes fait attaquer <br/>
-		un mois plus tard. Malgré les efforts vous n'arriver pas a défendre <br/>
+    <p>Vous avez bien fait de rester sur la planète car celle-ci s'est faite attaquer quelques mois plus<br/>
+        tard. Aptrès plusieurs jours de combat vous perdez l'avantage, que décidez-vous de faire ?
 	 </p>
 	</section>
 
@@ -18,8 +21,8 @@
 		<img alt="vaisseau abandonné" src="../../images/ccc1234.jpg">
 	</div>
 	<nav id = "choix">
-		<a href ="ChineChoix31.html"><button>Envoyer un SOS</button> </a>
-		<a href="ChineChoix32.html"><button> Prendre la fuite</button></a>
+		<div class="options"><a href ="ChineChoix31.html"><button class="btn btn-info">Envoyer un SOS</button> </a></div>
+		<div class="options"><a href="ChineChoix32.html"><button class="btn btn-info"> Prendre la fuite</button></a></div>
 	</nav>
 	</body>
 </html>
