--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-	<section class="container-fluid mt-0 ml-0" id="intro">
+	<section class="container-fluid mt-5 ml-5" id="intro">
 		<div class="row">
 			<div class="col-sm-12">
 				<h1>Space Wars</h1>
@@ -22,10 +22,11 @@
 					En 2069, l'humanité a exploré toute la galaxie et <br /> en
 					demande toujours plus. Suivez les aventures des plus<br /> grands
 					héros du XIème siècle, des astronautes brillants<br />
-					d'ingéniosité et pleins de bravoure.<br />
-				</p>
+					d'ingéniosité et pleins de bravoure... Ou pas.<br />
+                </p>
+                <audio autoplay loop src="../musiques/intro.mp3"></audio>
 				<a href="choix.html">
-				<button class="btn btn-info col-sm-4 ml-5 mt-sm-5" id="boutonAventure">Commencez l'aventure</button></a>
+				<button class="btn btn-info col-4 ml-5 mt-5" id="boutonAventure">Commencez l'aventure</button></a>
 			</div>
 		</div>
 	</section>
