L'Europe est terminée !

--- a/html/Chine/ChineChoix1.html
+++ b/html/Chine/ChineChoix1.html
@@ -23,9 +23,9 @@
 	</div>
 
 	<nav id = "choix" class="container">
-		<a href ="ChineChoix12.html"><div class="options"><button class="btn btn-info"> Les sauver un par un </button></div></a>
-		<a href="ChineChoix22.html"><div class="options"><button class="btn btn-info"> Diviser les troupes</button></div></a>
-		<a href="ChineChoix3.html"><div class="options"><button class="btn btn-info"> Ne sauver personne</button></div></a>
+		<div class="options"><a href ="ChineChoix12.html"><div class="options"><button class="btn btn-info"> Les sauver un par un </button></div></a></div>
+		<div class="options"><a href="ChineChoix22.html"><div class="options"><button class="btn btn-info"> Diviser les troupes</button></div></a></div>
+		<div class="options"><a href="ChineChoix3.html"><div class="options"><button class="btn btn-info"> Ne sauver personne</button></div></a></div>
 	</nav>
 </body>
 </html>
