--- a/html/Chine/ChineChoix22.html
+++ b/html/Chine/ChineChoix22.html
@@ -15,7 +15,7 @@
             <p>Vous vous divisez pour mieux régner mais le destin est contre vous : le premier éqquipage se<br/>
                 fait aspirer par un trou noir dont la force de gravitation était couverte par une planète<br/>
                 massive, tandis que l'autre doit choisir entre protéger le gisement qui se fait attaquer<br/>
-                par des vaisseaux inconnus et la Terre qui se fait envahir par des parasites
+                par des vaisseaux inconnus et la Terre qui se fait envahir par des parasites.
 			</p>
 		</section>
 
