--- a/html/Chine/ChineChoix2234.html
+++ b/html/Chine/ChineChoix2234.html
@@ -4,12 +4,15 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title>Contamination</title>
 	</head>
 	<body>
 		<section id="presentation">
 			<h1> Retour ?</h1>
-			<p> Une des personnes que vous avez sauvez à cacher les faites au'il est contaminer <br/>
+			<p> Une des personnes que vous avez sauvé a caché le fait qu'elle était contaminée !<br/>
 			Ce qui fait que tous le monde est mort !! <br/>
 			</p>
 		</section>
@@ -19,7 +22,7 @@
 		</div>
 
 		<nav id = "choix">
-			<a href ="../index.html"><button> Retour page acceuil</button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger"> Retour page acceuil</button> </a></div>
 		</nav>
 	</body>
 </html>
