--- a/html/Chine/ChineChoix2241.html
+++ b/html/Chine/ChineChoix2241.html
@@ -12,7 +12,7 @@
 	<body>
 		<section id="presentation">
 			<h1> Survivre ! </h1>
-			<p> Vous avez réussi a les détruire mais votre vaisseau tombe en panne <br/>
+			<p> Vous avez réussi a les détruire mais votre vaisseau tombe en panne. <br/>
 			</p>
 		</section>
 
