--- a/html/Chine/ChineChoix22411.html
+++ b/html/Chine/ChineChoix22411.html
@@ -13,7 +13,7 @@
 		<section id="presentation">
 			<h1> Erreur ! </h1>
             <p> Votre signal a attirée des extra-terrestres agressifs qui déciment votre équipage et réduisent<br/>
-                votre vaisseau en poussière
+                votre vaisseau en poussière.
 			</p>
 		</section>
 
