--- a/html/Chine/ChineChoix22412.html
+++ b/html/Chine/ChineChoix22412.html
@@ -13,7 +13,7 @@
 		<section id="presentation">
 			<h1> Retour sur Terre </h1>
 			<p> Vous avez réussi à réparer le vaisseau et à retourner sur Terre mais <br/>
-				la peur de l'espace restera dans votre coeur à tout jamais <br/>
+				la peur de l'espace restera dans votre coeur à tout jamais. <br/>
 			</p>
 		</section>
 
