--- a/html/Chine/ChineChoix31.html
+++ b/html/Chine/ChineChoix31.html
@@ -12,7 +12,7 @@
 	<body>
 	<section id="presentation">
 	<h1> D'autres ennemis encore </h1>
-	<p> Votre signal fait venir un autre annemi inconnu qui a réduit la planète en miettes<br/>
+	<p> Votre signal fait venir un autre annemi inconnu qui a réduit la planète en miettes.<br/>
 	 </p>
 	</section>
 
