--- a/html/Chine/ChineChoix51.html
+++ b/html/Chine/ChineChoix51.html
@@ -13,7 +13,7 @@
 	<section id="presentation">
 	<h1> Erreur de votre part</h1>
     <p>Malheureusement pour vous une caméra de surveillance du vaisseau russe vous capture en<br/>
-        pleine fuite, vous êtes arrêtés dès votre retour sur Terre
+        pleine fuite, vous êtes arrêtés dès votre retour sur Terre.
 	 </p>
 	</section>
 
