--- a/html/Chine/ChineChoix521.html
+++ b/html/Chine/ChineChoix521.html
@@ -4,13 +4,17 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
+		<link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		
 		<title> Chine</title>
 	</head>
 	<body>
 	<section id="presentation">
 	<h1> Prendre en Otage</h1>
-	<p> Vous avez réussi a obtenir des biens grace a cette otage <br/>
-		Mais a partir de ce jour la Chine ne recoit plus aucune aide des autres puissances<br/>
+	<p> Vous avez gagné beaucoup d'argent grâce à cet ôtage. Mais à partir de ce jour la Chine ne <br/>
+		recevra plus aucune aide des autres puissances.<br/>
 	 </p>
 	</section>
 
@@ -18,7 +22,7 @@
 		<img alt="vaisseau abandonné" src="../../images/chinechoix1.jpg">
 	</div>
 	<nav id = "choix">
-		<a href ="../index.html"><button>Retour à l'accueil</button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
 	</nav>
 	</body>
 </html>
