--- a/html/choix.html
+++ b/html/choix.html
@@ -9,6 +9,7 @@
 	<link href="../css/styleGlobal.css" rel="stylesheet" />
 	<link href="../css/bootstrap.css" rel="stylesheet" />
 	<link href="../css/bootstrap-grid.css" rel="stylesheet" />
+	<title>Choix</title>
 	
 	</head>
 
@@ -23,10 +24,10 @@
 		
 		<div id="choix">
 		
-			<div id="usa" class="factions"><a href="usa.html" class="liensFactions">Les USA</a></div>
-			<div id="chine" class="factions"><a href="Chine/chine.html" class="liensFactions">La Chine</a></div>
-			<div id="europe" class="factions"><a href="./europe/europe.html" class="liensFactions">L'Europe</a></div>
-			<div id="russie" class="factions"><a href="russie/russie.html" class="liensFactions">La Russie</a></div>
+			<a href="usa.html" class="liensFactions"><div id="usa" class="factions">Les USA</div></a>
+			<a href="Chine/chine.html" class="liensFactions"><div id="chine" class="factions">La Chine</div></a>
+			<a href="europe/europe.html" class="liensFactions"><div id="europe" class="factions">L'Europe</div></a>
+			<a href="russie/russie.html" class="liensFactions"><div id="russie" class="factions">La Russie</div></a>
 		
         </div>
         <audio autoplay loop src="../musiques/imperia.mp3"></audio>
