--- a/html/russie/trouve.html
+++ b/html/russie/trouve.html
@@ -27,8 +27,9 @@
              <img id="bunker" alt="bunker" src="../../images/russie/bunker.png" />  
              
             </section>
-<div class="options"><a href ="../index.html"><button class="btn btn-info">Retente l'aventure !</button> </a></div>   
-        
+<nav id = "choix">
+			<div id="bt" class="options"><a href ="../index.html"><button class="btn btn-danger">Retenter l'aventure</button> </a></div>
+		</nav>        
         </body>
 
 </html>
