--- a/html/Chine/ChineChoix222.html
+++ b/html/Chine/ChineChoix222.html
@@ -13,7 +13,7 @@
 		<section id="presentation">
 			<h1> Défaite pour votre équipage </h1>
             <p>Malgré votre bravoure vous êtes rapidement dépassé en force et en nombre par l'ennemi qui<br/>
-            vous réduit en esclavage vous et votre équipage
+            vous réduit en esclavage vous et votre équipage.
 			</p>
 		</section>
 
