--- a/html/Chine/ChineChoix223.html
+++ b/html/Chine/ChineChoix223.html
@@ -13,7 +13,7 @@
 		<section id="presentation">
 			<h1>Traitre</h1>
 			<p>
-			Votre planète a été détruite et vous culpabilisez le reste de votre vie <br/>
+			Votre planète a été détruite et vous culpabilisez le reste de votre vie.<br/>
 			</p>
 		</section>
 
