--- a/html/Chine/ChineChoix32.html
+++ b/html/Chine/ChineChoix32.html
@@ -13,12 +13,12 @@
 	<section id="presentation">
 	<h1> Fuite non réussie</h1>
     <p>Vous faites escale sur une petite planète... Infestée de parasites. Vous et votre équipage n'y<br/>
-        survivez pas
+        survivez pas.
 	 </p>
 	</section>
 
 	<div id ="imageGarde">
-		<img alt="vaisseau abandonné" src="../../images/mort.png">
+		<img alt="vaisseau abandonné" src="../../images/parasite.jpg">
 	</div>
 	<nav id = "choix">
 			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
