--- a/html/Chine/ChineChoix522.html
+++ b/html/Chine/ChineChoix522.html
@@ -4,12 +4,15 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../../css/styleChine.css">
-		<title> Chine</title>
+		<link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+		<title> Fin</title>
 	</head>
 	<body>
 	<section id="presentation">
 	<h1> Très bon choix</h1>
-	<p> Cette amitié mène jusqu'a l'Union de la Chine et la Russie qui devient finalement<br/>
+	<p> Cette nouvelle amitié mène jusqu'a l'Union de la Chine et de la Russie qui devient finalement<br/>
 		la plus grande puissance !!! <br/>
 	 </p>
 	</section>
@@ -18,7 +21,7 @@
 		<img alt="vaisseau abandonné" src="../../images/Terre.jpg">
 	</div>
 	<nav id = "choix">
-		<a href ="../index.html"><button>Retour à l'accueil</button> </a>
+			<div class="options"><a href ="../index.html"><button class="btn btn-danger">Retentez votre chance</button> </a></div>
 	</nav>
 	</body>
 </html>
