Plus qu'à ajouter la redirection sur la dernière page des usa !

--- a/html/choix.html
+++ b/html/choix.html
@@ -24,8 +24,8 @@
 		
 		<div id="choix">
 		
-			<a href="usa.html" class="liensFactions"><div id="usa" class="factions">Les USA</div></a>
-			<a href="Chine/chine.html" class="liensFactions"><div id="chine" class="factions">La Chine</div></a>
+			<a href="usa/indexUsa.html" class="liensFactions"><div id="usa" class="factions">Les USA</div></a>
+			<a href="chine/chine.html" class="liensFactions"><div id="chine" class="factions">La Chine</div></a>
 			<a href="europe/europe.html" class="liensFactions"><div id="europe" class="factions">L'Europe</div></a>
 			<a href="russie/russie.html" class="liensFactions"><div id="russie" class="factions">La Russie</div></a>
 		
