--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 <body>
 
 	<section class="container-fluid mt-5 ml-5" id="intro">
-		<div class="row">
+		<div id="divEmbetant" class="row">
 			<div class="col-sm-12">
 				<h1>Space Wars</h1>
 				<p>
@@ -25,10 +25,11 @@
 					d'ingéniosité et pleins de bravoure... Ou pas.<br />
                 </p>
                 <audio autoplay loop src="../musiques/intro.mp3"></audio>
-				<a href="choix.html">
-				<button class="btn btn-info col-4 ml-5 mt-5" id="boutonAventure">Commencez l'aventure</button></a>
-			</div>
+				</div>
 		</div>
+		<a href="choix.html">
+				<button class="btn btn-info" id="boutonAventure">Commencez l'aventure</button></a>
+			
 	</section>
 </body>
 
