--- a/html/usa/SpaceInvader.html
+++ b/html/usa/SpaceInvader.html
@@ -4,8 +4,15 @@
 	<title>Attaque</title>
 </head>
 <link href="../../css/usa/SpaceInvader.css" href="https://fonts.googleapis.com/css?family=Play:400,700" rel="stylesheet" type="text/css" />
+        <link href="../../css/styleGlobal.css" rel="stylesheet" />
+        <link href="../../css/bootstrap.css" rel="stylesheet" />
+        <link href="../../css/bootstrap-grid.css" rel="stylesheet" />
+	
 <canvas id="game-canvas" width="640" height="640"></canvas>
 <script type="text/javascript" src="../../js/usa/code.js"></script>
+<nav id = "choix">
+			<div id="b" class="options"><a href ="../index.html"><button class="btn btn-danger">Retenter l'aventure</button> </a></div>
+		</nav>       
 <body>
 
 </body>
