# WARNING: head commit changed in the meantime
Retrouver images fini !

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
 				<p>
 					En 2069, l'humanité a exploré toute la galaxie et <br /> en
 					demande toujours plus. Suivez les aventures des plus<br /> grands
-					héros du XIème siècle, des astronautes brillants<br />
+					héros du XXIème siècle, des astronautes brillants<br />
 					d'ingéniosité et pleins de bravoure... Ou pas.<br />
                 </p>
                 <audio autoplay loop src="../musiques/intro.mp3"></audio>
