--- a/html/usa/Commande.html
+++ b/html/usa/Commande.html
@@ -19,10 +19,9 @@
 		<img src="../../images/usa/vaisseau.jpg">
 	</article>
 	<aside>
-		 	<div class="petitdiv">
-		 		 <a href="SpaceInvader.html">A L'ATTAQUE ! </a>
-		 	</div>
-		 	
+		 			 	<div class="contenu">
+		 			 	<a href="SpaceInvader.html"><button id="cont" class="btn btn-info col-8 ml-5 mt-5 di"><p class="tab">A L'ATTAQUE !</p></button></a>
+		 			 	</div>  
 		 	
 	</aside>
 </body>
