--- a/html/usa/USA2.html
+++ b/html/usa/USA2.html
@@ -18,18 +18,11 @@
 		<img src="../../images/usa/alliance.png">
 	</article>
 	<aside>
-		 	<div class="petitdiv">
-		 		 <a href="refus.html">Chine</a>
-		 		 <img src="../../images/usa/chine.png">
-		 	</div>
-		 	<div class="petitdiv">
-		 		 <a href="accepter.html">Europe </a>
-		 		 <img src="../../images/usa/europe.svg">
-		 	</div>
-		 	<div class="petitdiv">
-		 		 <a href="refus.html">Russie</a>
-		 		 <img src="../../images/usa/russie.svg">
-		 	</div>
+		 	<div class="contenu">
+		 			 	<a href="refus.html"><button id="cont" class="btn btn-info col-8 ml-5 mt-5 di"><p class="tab">Chine</p><img class="tab" id="imgBtn" src="../../images/usa/chine.png"></button></a>
+						<a href="accepter.html"><button id="cont" class="btn btn-info col-8 ml-5 mt-5 di"><p class="tab">Europe</p><img class="tab" id="imgBtn" src="../../images/usa/europe.svg"></button></a>
+            			<a href="refus.html"><button id="cont" class="btn btn-info col-8 ml-5 mt-5 di"><p class="tab">Russie</p><img class="tab" id="imgBtn" src="../../images/usa/russie.svg"></button></a>
+              </div>  
 	</aside>
 </body>
 </html>
