--- a/html/usa/USA5.html
+++ b/html/usa/USA5.html
@@ -19,10 +19,9 @@
 		<img src="../../images/usa/alliance.png">
 	</article>
 	<aside>
-		 	<div class="petitdiv">
-		 		 <a href="choixguerre.html">Continuer
-		 	</div>
-		 	
+		 	<div class="contenu">
+		 			 	<a href="choixguerre.html"><button id="cont" class="btn btn-info col-8 ml-5 mt-5 di"><p class="tab">Continuer</p></button></a>
+						</div>  
 		 	
 	</aside>
 </body>
