--- a/html/usa/choixguerre.html
+++ b/html/usa/choixguerre.html
@@ -19,14 +19,11 @@
 		</div>
 		<img src="../../images/usa/guerre.jpg"/>
 	</article>
-	<aside>
-		 	<div class="petitdiv">
-		 		 <a href="Commande.html">
-		 		 attaquer</a>
-		 	</div>
-		 	<div class="petitdiv">
-		 		<a href="Defaite.html">se tenir au plan</a>
-		 	</div>
+	<aside>		 	
+		 	<div class="contenu">
+		 			 	<a href="Commande.html"><button id="cont" class="btn btn-info col-8 ml-5 mt-5 di"><p class="tab">Attaquer</p></button></a>
+		 			 	<a href="Defaite.html"><button id="cont" class="btn btn-info col-8 ml-5 mt-5 di"><p class="tab">S'en tenir au plan</p></button></a>
+						</div>  
 		 	
 	</aside>
 </body>
