--- a/html/usa/indexUSA.html
+++ b/html/usa/indexUSA.html
@@ -20,16 +20,12 @@
 		</div>
 		<img src="../../images/usa/imagePageAcceuil.jpg">
 	</article>
-	<aside>
-		 	<div class="petitdiv">
-		 		 <a href="USA1.html">
-		 		 d'inventer un argument imaginaire </br>
-		 		qui a pour but de dissuader les</br>
-		 		autres bélligerants à les attaquer </a>
-		 	</div>
-		 	<div class="petitdiv">
-		 		<a href="USA2.html">Trouver une alliance</a>
-		 	</div>
+	<aside class="divBtn">
+		 	
+		 			 	<div class="contenu">
+		 			 	<div class="column"><a href="USA2.html"><button id="cont" class="btn btn-info col-8 ml-5 mt-5 di"><p>Inventer un argument imaginaire qui a pour but de dissuader les autres belligérants à les </p></button></a></div>
+                  <div class="column"><a href="USA2.html"><button id="cont" class="btn btn-info col-8 ml-5 mt-5 di"><p>Trouver une alliance</p></button></a></div>
+                        </div>  
 		 	
 	</aside>
 </body>
