--- a/html/usa/refus.html
+++ b/html/usa/refus.html
@@ -18,10 +18,9 @@
 		<img src="../../images/usa/refus.jpg">
 	</article>
 	<aside>
-		 	<div class="petitdiv">
-		 		 <a href="USA2.html">Retour</a>
-		 	</div>
-		 	
+		 			 	<div class="contenu">
+		 			 	<a href="USA2.html"><button id="cont" class="btn btn-info col-8 ml-5 mt-5 di"><p class="tab">Retour</p></button></a>
+						</div>  
 		 	
 	</aside>
 </body>
