--- a/html/choix.html
+++ b/html/choix.html
@@ -24,7 +24,7 @@
 		
 		<div id="choix">
 		
-			<a href="usa/indexUsa.html" class="liensFactions"><div id="usa" class="factions">Les USA</div></a>
+			<a href="usa/indexUSA.html" class="liensFactions"><div id="usa" class="factions">Les USA</div></a>
 			<a href="chine/chine.html" class="liensFactions"><div id="chine" class="factions">La Chine</div></a>
 			<a href="europe/europe.html" class="liensFactions"><div id="europe" class="factions">L'Europe</div></a>
 			<a href="russie/russie.html" class="liensFactions"><div id="russie" class="factions">La Russie</div></a>
